descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.


----------------------------------------------------------------------
--- 2014-XX-XX  Release 7.XX.XX                                    ---
----------------------------------------------------------------------

* fixed crash of extrude with special case bezier curves - huskmate13
* improved performance of 'terrain' & numerous shaders - Sean Morrison
* new manual pages for rtexample and brep_simple - Shardul Chiplunkar
* added key binding to reopen/focus mged command window - Emory Huff
* added menu option to restore mged command window - Cezar Elnazli
* search command now recognizes hyp and metaball types - Cliff Yapp
* added -depth option to MGED 'search' command - Cliff Yapp
* improved 'search' with 'flat' search path modifier - Cliff Yapp
* improved 'search' with above/equal/below depth limits - Cliff Yapp


----------------------------------------------------------------------
--- 2014-02-05  Release 7.24.2                                     ---
----------------------------------------------------------------------

* fix z-clipping bug in MGED's X display manager - Cliff Yapp
* added attribute sorting option to the 'attr' command - Tom Browder
* changed 'bwfilter' tool offset option from -o to -O - Mohit Daga
* gattributes section 5 man page renamed to attributes - Tom Browder
* changed 'benchmark' defaults: 2% deviation, 5 frames - Sean Morrison
* improved bwrect to handle redirected input and output - Mohit Daga
* fixed TIE mesh raytrace crashes on 32-bit platforms - Sean Morrison
* fixed pixscale and bwscale to not output ioctl error - Mohit Daga
* fixed adrt/TIE polygonal mesh memory management bug - Richard Weiss
* fixed fast4-g importer parsing of blank input lines - Richard Weiss
* added -o flag to 'bb' command for oriented bounding box - Cliff Yapp
* allow search to see hidden combs with the -a flag - Cliff Yapp